# emerald-vault

./: .appveyor.yml  .editorconfig  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.adoc  README.md  bintray.json  build.rs  build.sh  copy_bin.sh  crates.md  deploy.sh  dump.rdb  gcloud-appveyor.json.enc  gcloud-travis.json.enc  rustfmt.toml  shell.nix  usage.txt
.circleci/: config.yml  deploy.sh  gcloud-circleci.json.enc
.github/actions-rs/: grcov.yml
.github/workflows/: publish.yaml  release.yaml  test.yaml
benches/: bench_crypto.rs  bench_storage.rs
docs/: API.md  api.adoc  api.md  cli.adoc
docs/includes/: api_additional_parameters.adoc
emerald-cli/: Cargo.toml  usage.txt
emerald-cli/src/: main.rs
emerald-console/: Cargo.toml  README.md  cli.bats  cli.yml  usage.txt
emerald-console/docs/: README.adoc  SUMMARY.adoc  install.adoc  usage-accounts.adoc  usage-read.adoc  usage-server.adoc  usage-sign.adoc  usage.adoc
emerald-console/src/: cmd.rs  indicator.rs  main.rs  rpc.rs
emerald-console/src/cmd/: account.rs  arg_handlers.rs  error.rs  mod.rs  transaction.rs
emerald-console/src/rpc/: comm.rs  mod.rs  serialize.rs
emerald-core/: Cargo.toml  README.md
emerald-core/benches/: bench_crypto.rs  bench_storage.rs  crypto_benches.rs
emerald-core/src/: addressbook.rs  contract.rs  core.rs  crypto.rs  hdwallet.rs  keystore.rs  lib.rs  mnemonic.rs  rpc.rs  storage.rs  util.rs
emerald-core/src/contract/: contracts.rs  error.rs  mod.rs
emerald-core/src/contract/serialize/: mod.rs
emerald-core/src/convert/: ethereum.rs  proto.rs
emerald-core/src/convert/proto/: book.rs  crypto.rs  pk.rs  wallet.rs
emerald-core/src/core/: address.rs  chains.rs  contract.rs  error.rs  mod.rs  signature.rs  transaction.rs
emerald-core/src/crypto/: encrypted.rs  kdf.rs  sign.rs
emerald-core/src/hdwallet/: apdu.rs  bip32.rs  comm.rs  error.rs  hd_keystore.rs  keystore.rs  ledger.rs  mod.rs  u2f_hid.rs
emerald-core/src/keystore/: cipher.rs  error.rs  kdf.rs  mod.rs  prf.rs  serialize.rs
emerald-core/src/keystore/serialize/: address.rs  byte_array.rs  crypto.rs  error.rs  mod.rs
emerald-core/src/mnemonic/: error.rs  mod.rs
emerald-core/src/rpc/: common.rs  error.rs  macros.rs  mod.rs  serialize.rs  serves.rs
emerald-core/src/storage/: addressbook.rs  archive.rs  contracts.rs  error.rs  keyfile.rs  mod.rs  storage_ctrl.rs  vault.rs
emerald-core/src/storage/addressbook/: error.rs  mod.rs
emerald-core/src/storage/keyfile/: db.rs  error.rs  fs.rs  mod.rs
emerald-core/src/util/: byte_array.rs  crypto.rs  mod.rs  rlp.rs
emerald-core/tests/: addressbook_test.rs  contract_test.rs  keystore_test.rs
emerald-core/tests/contracts/: contract.json
emerald-core/tests/keystore/serialize/: UTC--2017-05-30T06-16-46Z--a928d7c2-b37b-464c-a70b-b9979d59fac4  UTC--2017-05-30T06-16-46Z--a928d7c2-b37b-464c-a70b-b9979d59fac5
emerald-vault-migrate/: Cargo.toml
emerald-vault-migrate/src/: lib.rs  source.rs
emerald-vault-migrate/src/migration/: types.rs
emerald-vault-migrate/src/source/: json_data.rs  v1.rs  v2.rs
emerald-vault-proto/: Cargo.toml
emerald-vault-proto/proto/: book.proto  pk.proto  seed.proto  wallet.proto
emerald-vault-proto/src/: address.rs  book.rs  lib.rs  wallet.rs
examples/ffi/: README.md
examples/ffi/src/: main.c  mos.yml
plumbus/: Cargo.toml
plumbus/src/: main.rs
proto/: address.proto  book.proto  common.proto  crypto.proto  pk.proto  seed.proto  wallet.proto
src/: address.rs  addressbook.rs  blockchain.rs  config.rs  contract.rs  contracts.rs  convert.rs  core.rs  crypto.rs  error.rs  extract_key.rs  hdwallet.rs  keystore.rs  lib.rs  main.rs  method.rs  migration.rs  mnemonic.rs  proto.rs  request.rs  rlp.rs  serialize.rs  sign.rs  storage.rs  structs.rs  transaction.rs  util.rs
src/blockchain/: addresses.rs  bitcoin.rs  chains.rs  error.rs  ethereum.rs
src/blockchain/ethereum/: address.rs  eip191.rs  eip712.rs  hex.rs  signature.rs  transaction.rs
src/client/: mod.rs
src/contract/: contracts.rs  error.rs  mod.rs
src/convert/: error.rs  ethereum.rs  json.rs  proto.rs
src/convert/json/: address.rs  keyfile.rs
src/convert/proto/: address.rs  book.rs  crypto.rs  pk.rs  seed.rs  wallet.rs
src/core/: address.rs  chains.rs  error.rs  mod.rs  signature.rs  transaction.rs
src/crypto/: encrypted.rs  error.rs  fingerprint.rs  kdf.rs  pk.rs  seed.rs  sign.rs  util.rs
src/hdwallet/: apdu.rs  bip32.rs  comm.rs  error.rs  keystore.rs  mod.rs
src/key_generator/: mod.rs  private_key.rs  serialize.rs  util.rs
src/keystore/: address.rs  cipher.rs  error.rs  extract_key.rs  kdf.rs  keycipher.rs  meta.rs  mod.rs  prf.rs  serialize.rs  sign.rs
src/keystore/serialize/: address.rs  byte_array.rs  crypto.rs  error.rs  meta.rs  mod.rs
src/migration/: source.rs  types.rs
src/migration/source/: common.rs  json_data.rs  v1.rs  v2.rs  v3.rs  v4.rs
src/mnemonic/: bip32.rs  error.rs  language.rs  mod.rs
src/node/: error.rs  geth_control.rs  mod.rs
src/proto/: address.rs  book.rs  common.rs  crypto.rs  lib.rs  pk.rs  seed.rs  wallet.rs
src/rpc/: common.rs  error.rs  http.rs  mod.rs  rcommon.rs  serialize.rs  serves.rs
src/sign/: bip32.rs  bitcoin.rs  ethereum.rs  key_source.rs
src/storage/: addressbook.rs  admin.rs  archive.rs  entry.rs  error.rs  files.rs  global_key.rs  icons.rs  keyfile.rs  migrate.rs  mod.rs  snapshot.rs  storage_ctrl.rs  vault.rs  vault_bitcoin.rs  vault_ethereum.rs  watch.rs
src/storage/addressbook/: error.rs  (+1 more)
src/structs/: book.rs  crypto.rs  pk.rs  seed.rs  types.rs  utils.rs  wallet.rs
src/util/: byte_array.rs  crypto.rs  mod.rs  optional.rs  rlp.rs
tests/: addressbook_test.rs  contract_test.rs  contracts_test.rs  keystore_test.rs
tests/addressbook/: entry0.json  entry1.json  one_item.csv  one_item_no_header.csv
tests/hdwallet/: address.json  tx.json
tests/keystore/: UTC--2015-08-11T06-13-53-359Z--008aeeda4d805471df9b2a5b0f38a0c3bcba786b  UTC--2017-03-17T10-52-08.229Z--0047201aed0b69875b24b614dda0270bcd9f11cc  UTC--2017-03-20T17-03-12Z--37e0d14f-7269-7ca0-4419-d7b13abfeea9
(+11 files in other folders)
