[package]
name = "emerald-vault"
version = "0.29.1"
authors = ["Igor Artamonov <splix@emeraldpay.io>", "Dmitry Ulanov <dulanov@gmail.com>", "Constantine Kryvomaz <kostiyantynk@gmail.com>", "Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "Emerald Vault - Key Storage for Emerald Wallet"
homepage = "https://emerald.cash"
repository = "https://github.com/emeraldpay/emerald-vault"
documentation = "https://docs.rs/emerald-vault"
keywords = ["ethereum", "bitcoin", "blockchain", "cryptocurrency"]
categories = ["cryptography"]
readme = "crates.md"
license = "Apache-2.0"
edition = "2018"
autobenches = false

[lib]
name = "emerald_vault"
path = "src/lib.rs"
#crate-type = ["rlib", "cdylib"]

[dependencies]
time = "0.3.5"
futures = "0.3.19"
lazy_static = "1.0"
log = "0.4.14"
regex = "1.5.4"
hex = "0.4.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
glob = "0.3.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
secp256k1 = { version = "0.20.3", features = ["rand", "recovery"] }
# used by secp
rand = "0.6.5"
getrandom = "0.2.4"
byteorder = "1.4.3"
ethabi = "2.0.0"
num = "0.3.0"
bitcoin = "0.27.1"
aes-ctr = "0.6.0"
sha2 = "0.10.1"
sha3 = "0.10.0"
pbkdf2 = "0.10.0"
scrypt = "0.4.1"
argon2 = "0.3.2"
hmac = "0.12.0"
hyper = { version = "0.12", optional = true }
clippy = { version = "0.0", optional = true }
chrono = "0.4.13"
protobuf = { version = "= 2.25.2", features = ["with-bytes"] }
enum-display-derive = "0.1.1"
fs_extra = "1.2.0"
csv = "1.1.6"
base64 = "0.13.0"
rlp = "0.5.1"
hdpath = { version = "0.6", features = ["with-bitcoin"] }
byte-array-struct = { version = "0.2.0", features = ["with-serde"] }
bitcoin_hashes = "0.9.0"
#emerald-hwkey = { path = "../emerald-hwkey" }
#emerald-hwkey = { git = "https://github.com/emeraldpay/emerald-hwkey", branch = "master" }
emerald-hwkey = "^0.1.2"

[dev-dependencies]
tempdir = "0.3.7"
quickcheck = "0.9.2"
bencher = "0.1.5"
# default feature bzip2 conflicts with rocksdb
zip = { version = "0.5.3", default-features = false, features = ["deflate"] }
# quickcheck_macros = "0.4"
simple_logger = "1.6.0"

[features]
default = []
dev = ["clippy"]
fs-storage = []

[[bench]]
name = "bench_crypto"
harness = false
