[package]
name = "emerald-vault"
version = "0.36.0-dev"
authors = ["Igor Artamonov <splix@emerald.cash>", "Dmitry Ulanov <dulanov@gmail.com>", "Constantine Kryvomaz <kostiyantynk@gmail.com>", "Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "Emerald Vault - Key Storage for Emerald Wallet"
homepage = "https://emerald.cash"
repository = "https://github.com/emeraldpay/emerald-vault"
documentation = "https://docs.rs/emerald-vault"
keywords = ["ethereum", "bitcoin", "blockchain", "cryptocurrency"]
categories = ["cryptography"]
readme = "crates.md"
license = "Apache-2.0"
edition = "2024"
autobenches = false

[lib]
name = "emerald_vault"
path = "src/lib.rs"
#crate-type = ["rlib", "cdylib"]

[dependencies]
time = "0.3"
lazy_static = "1.0"
log = "0.4.14"
regex = "1.5.4"
hex = "0.4.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
glob = "0.3.0"
uuid = { version = "1.2", features = ["serde", "v4"] }
secp256k1 = { version = "=0.29.1", features = ["rand", "recovery"] }
# used by secp
rand = "=0.8.5"
byteorder = "1.4.3"
ethabi = "18.0.0"
num = "0.4.0"
bitcoin = "0.32"
ethers-core = { version = "1.0.2", default-features = false, features = ["eip712", "macros"] }
ethers-derive-eip712 = "1.0.2"
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
sha3 = "0.10"
pbkdf2 = "0.12"
scrypt = "0.11"
argon2 = "0.5"
hmac = "0.12"
hyper = { version = "0.12", optional = true }
clippy = { version = "0.0", optional = true }
chrono = "0.4"
protobuf = { version = "= 2.25.2", features = ["with-bytes"] }
enum-display-derive = "0.1"
fs_extra = "1.3"
csv = "1.3"
base64 = "0.22"
rlp = "0.6"
hdpath = { version = "0.7", features = ["with-bitcoin"] }
#hdpath = { path = "../hdpath", features = ["with-bitcoin"] }
#hdpath = { git = "https://github.com/emeraldpay/hdpath-rs", features = ["with-bitcoin"] }
byte-array-struct = { version = "0.2.0", features = ["with-serde"] }
bitcoin_hashes = "0.16"
#emerald-hwkey = { path = "../emerald-hwkey" } q
emerald-hwkey = { git = "https://github.com/emeraldpay/emerald-hwkey", branch = "master" }
#emerald-hwkey = "0.6"
num-bigint = "0.4"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
itertools = "0.14"

[dev-dependencies]
tempdir = "0.3.7"
bencher = "0.1.5"
simple_logger = "4.0.0"
itertools = "0.14"

[features]
default = []
dev = ["clippy"]
hwkey-emulate = ["emerald-hwkey/speculos"]

[[bench]]
name = "bench_crypto"
harness = false
