[package]
name = "emerald-cli"
version = "0.10.1"
authors = ["Dmitry Ulanov <dulanov@gmail.com>", "Constantine Kryvomaz <kostiyantynk@gmail.com>", "Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "Ethereum Classic secure account management command line interface"
homepage = "http://etcdevteam.com"
repository = "https://github.com/ethereumproject/emerald-rs"
documentation = "https://docs.rs/emerald-core"
keywords = ["ethereum-classic", "blockchain", "cli", "crypto-wallet", "cold-storage"]
categories = ["command-line-interface"]
readme = "../README.adoc"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "ethereumproject/emerald-rs" }
appveyor = { repository = "ethereumproject/emerald-rs" }

[[bin]]
name = "emerald"
path = "src/main.rs"

[dependencies]
log = "0.3"
docopt = "0.8"
serde = "1.0"
serde_derive = "1.0"
env_logger = { version = "0.4", optional = true }
emerald-core = "0.10"
regex = "0.2"
clippy = {version = "0.0", optional = true}

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.4"
# quickcheck_macros = "0.4"

[features]
default = ["cli"]
cli = ["env_logger"]
dev = ["clippy"]
