[package]
name = "emerald-vault-core"
version = "0.26.5"
authors = ["Igor Artamonov <splix@emeraldpay.io>", "Dmitry Ulanov <dulanov@gmail.com>", "Constantine Kryvomaz <kostiyantynk@gmail.com>", "Stewart Mackenzie <setori88@gmail.com>", "Wei Tang <hi@that.world>"]
description = "Ethereum secure account management core libary"
homepage = "https://emeraldpay.io"
repository = "https://github.com/emeraldpay/emerald-vault"
documentation = "https://docs.rs/emerald-vault-core"
keywords = ["ethereum", "blockchain", "cryptocurrency", "private-key"]
categories = ["embedded", "external-ffi-bindings"]
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
autobenches = false

[badges]
travis-ci = { repository = "emeraldpay/emerald-vault" }
appveyor = { repository = "emeraldpay/emerald-vault" }

[lib]
name = "emerald_rs"
path = "src/lib.rs"
#crate-type = ["rlib", "cdylib"]

[dependencies]
time = "0.1"
futures = "0.1"
lazy_static = "1.0"
log = "0.4"
regex = "1.0"
hex = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
glob = "0.2"
uuid = { version = "0.6", features = ["serde", "v4"] }
secp256k1 = { version = "0.15", features = ["rand", "recovery"] }
rand = "0.6"
byteorder= "1.2"
ethabi = "2.0.0"
num = "0.2"
bitcoin = "0.21.0"
aes-ctr = "0.1"
sha2 = "0.8.0"
sha3 = "0.8.2"
pbkdf2 = "0.3.0"
scrypt = "0.2.0"
hmac = "0.7.1"
# rocksdb 0.12.2 is the last one which compiles on macOS with -C target-feature=+crt-static
rocksdb = { version = "= 0.12.2", default-features = false, features = ["snappy"] }
hyper = { version = "0.12", optional = true }
clippy = { version = "0.0", optional = true }
chrono = "0.4"
hidapi = "0.4"

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.6"
bencher = "0.1.5"
# quickcheck_macros = "0.4"
simple_logger = "1.5.0"

[features]
default = []
dev = ["clippy"]
fs-storage = []

[[bench]]
name = "bench_crypto"
harness = false
