[package]
name = "emerald_vault_migrate"
version = "0.27.0"
authors = ["Igor Artamonov <splix@emeraldpay.io>"]
description = "Migration Tool for Emerald Vault"
homepage = "https://emeraldpay.io"
repository = "https://github.com/emeraldpay/emerald-vault"
documentation = "https://docs.rs/emerald-vault-core"
keywords = ["ethereum", "blockchain", "cryptocurrency", "private-key"]
categories = []
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
autobenches = false

[badges]
travis-ci = { repository = "emeraldpay/emerald-vault" }
appveyor = { repository = "emeraldpay/emerald-vault" }

[lib]
name = "emerald_vault_migrate"
path = "src/lib.rs"
#crate-type = ["rlib", "cdylib"]

[dependencies]
time = "0.1"
lazy_static = "1.0"
log = "0.4"
regex = "1.3.1"
hex = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
glob = "0.3.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
rand = "0.6"
byteorder= "1.2"
num = "0.2"
# rocksdb 0.12.2 is the last one which compiles on macOS with -C target-feature=+crt-static
rocksdb = { version = "= 0.12.2", default-features = false, features = ["snappy"] }
clippy = { version = "0.0", optional = true }
chrono = "0.4"
emerald_vault_proto = { path = "../emerald-vault-proto" }
emerald_vault_core = { path = "../emerald-core" }
protobuf = { version = "= 2.8.1", features = ["with-bytes"] }

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.6"
bencher = "0.1.5"
# quickcheck_macros = "0.4"

[features]
default = []
dev = ["clippy"]
