[package]
name = "emerald_vault_proto"
version = "0.27.0"
authors = ["Igor Artamonov <splix@emeraldpay.io>"]
description = "Ethereum Vault Protobuf"
homepage = "https://emeraldpay.io"
repository = "https://github.com/emeraldpay/emerald-vault"
documentation = "https://docs.rs/emerald-vault-core"
keywords = ["ethereum", "blockchain", "cryptocurrency", "private-key"]
categories = []
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
autobenches = false

[badges]
travis-ci = { repository = "emeraldpay/emerald-vault" }
appveyor = { repository = "emeraldpay/emerald-vault" }

[lib]
name = "emerald_vault_proto"
path = "src/lib.rs"

[dependencies]
protobuf = { version = "= 2.8.1", features = ["with-bytes"] }

[dev-dependencies]

